k8s/demo3/deployment_v002.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-istio-v2
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-istio-v2
      version: v.0.0.2
  template:
    metadata:
      labels:
        app: demo-istio-v2
        version: v.0.0.2
    spec:
      containers:
      - name: demo-istio
        image: docker.io/jsenon/demo-istio:v.0.0.2
        imagePullPolicy: Always
        ports:
        - containerPort: 9010
