k8s/demo3/virtualservice-canary.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-istio-canary
spec:
  hosts:
    - "*"
  gateways:
  - demo-istio-gateway # <---- bind to gateway
  http:
  - match:
    - uri:
        prefix: "/canary/"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: demo-istio
      weight: 75
    - destination:
        host: demo-istio-v2
      weight: 25
  - match:
    - uri:
        prefix: "/v1"
    route:
    - destination:
        host: demo-istio
      weight: 100
  - match:
    - uri:
        prefix: "/v2"
    route:
    - destination:
        host: demo-istio-v2
      weight: 100
